ex/vm3/tests/emit/snapshots/emit__emit@table.h2.snap
---
source: ex/vm3/tests/emit.rs
expression: snapshot
input_file: ex/vm3/tests/emit/input/table.h2
---
function `__main__` (registers: 4, length: 14 (56 bytes))
.const
  0: Table(TableDescriptor { start: Reg(1), keys: {"a"} })
  1: Table(TableDescriptor { start: Reg(1), keys: {"c", "b", "a"} })
  2: Table(TableDescriptor { start: Reg(2), keys: {"b"} })
  3: Table(TableDescriptor { start: Reg(1), keys: {"a"} })
.locals
  v: r0
.code
  lnil r0           ; let v
  mtble r0          ; v = #{}
  lsmi 0, r1        ; v = #{a:0}
  mtbl [0], r0
  lsmi 0, r1        ; v = #{a:0, b:1, c:2}
  lsmi 1, r2
  lsmi 2, r3
  mtbl [1], r0
  lsmi 0, r2        ; v = #{a:#{b:0}}
  mtbl [2], r1
  mtbl [3], r0
  fin
  lnil r0
  ret r0

