ex/vm3/tests/emit/snapshots/emit__emit@tuple.h2.snap
---
source: ex/vm3/tests/emit.rs
expression: snapshot
input_file: ex/vm3/tests/emit/input/tuple.h2
---
function `__main__` (registers: 4, length: 14 (56 bytes))
.const
  0: TupleDescriptor { start: Reg(1), count: 1 }
  1: TupleDescriptor { start: Reg(1), count: 3 }
  2: TupleDescriptor { start: Reg(2), count: 1 }
  3: TupleDescriptor { start: Reg(1), count: 1 }
.locals
  v: r0
.code
  lnil  r0              ; let v
  mtupe r0              ; v = #()
  lsmi  0, r1           ; v = #(0)
  mtup  [0], r0
  lsmi  0, r1           ; v = #(0, 1, 2)
  lsmi  1, r2
  lsmi  2, r3
  mtup  [1], r0
  lsmi  0, r2           ; v = #(#(0))
  mtup  [2], r1
  mtup  [3], r0
  fin
  lnil  r0
  ret   r0

