ex/vm3/tests/emit/snapshots/emit__return_top_level_1.snap
---
source: ex/vm3/tests/./common/mod.rs
expression: snapshot
---
error: cannot use `return` outside of function
