ex/vm3/tests/emit/snapshots/emit__tuple.snap
---
source: ex/vm3/tests/./common/mod.rs
expression: snapshot
---
function `__main__` (registers: 5, length: 14 (56 bytes))
.const
  0: TupleProto { start: Reg(2), count: 1 }
  1: TupleProto { start: Reg(2), count: 3 }
  2: TupleProto { start: Reg(3), count: 1 }
  3: TupleProto { start: Reg(2), count: 1 }
.code
  lnil  r1              ; let v
  mte   r1              ; v = #()
  lsmi  0, r2           ; v = #(0)
  mt    [0], r1
  lsmi  0, r2           ; v = #(0, 1, 2)
  lsmi  1, r3
  lsmi  2, r4
  mt    [1], r1
  lsmi  0, r3           ; v = #(#(0))
  mt    [2], r2
  mt    [3], r1
  lnil  r0
  fin   
  ret   r0

